# spidola

./: .gitignore  .swiftlint.yml  APPSTORE_EXCEPTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF_TVOS_M0.md  IMPLEMENTATION_AGENT_PROMPT.md  README.md  REUSE.toml  clippy.toml  crowdin.yml  deny.toml  prek.toml  rust-toolchain.toml  rustfmt.toml
.augment/rules/: kotlin-dev-pro.md  rust-dev-pro.md  swift-dev-pro.md
.cargo/: config.toml
.github/workflows/: android.yml  apple.yml  core.yml  release.yml
apps/androidtv/: .editorconfig  build.gradle.kts  gradle.properties  settings.gradle.kts  signing.env.example
apps/androidtv/app/: build.gradle.kts
apps/androidtv/app/src/main/: AndroidManifest.xml
apps/androidtv/app/src/main/res/drawable/: banner.xml
apps/androidtv/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/androidtv/app/src/main/res/xml/: searchable.xml
apps/androidtv/config/detekt/: detekt.yml
apps/androidtv/contract-harness/: ContractHarness.kt
apps/androidtv/core/corekit/: build.gradle.kts
apps/androidtv/core/corekit/src/main/res/values/: strings.xml
apps/androidtv/core/designsystem/: build.gradle.kts
apps/androidtv/core/player-contract/: build.gradle.kts
apps/androidtv/feature/browse/: build.gradle.kts
apps/androidtv/feature/browse/src/main/res/values/: strings.xml
apps/androidtv/feature/playback/: build.gradle.kts
apps/androidtv/feature/playback/src/main/res/values/: strings.xml
apps/androidtv/feature/search/: build.gradle.kts
apps/androidtv/feature/search/src/main/res/values/: strings.xml
apps/androidtv/feature/settings/: build.gradle.kts
apps/androidtv/feature/settings/src/main/res/values/: strings.xml
apps/androidtv/feature/sources/: build.gradle.kts
apps/androidtv/gradle/: libs.versions.toml
apps/androidtv/player/engine-exo/: build.gradle.kts
apps/androidtv/player/engine-mpv/: build.gradle.kts  consumer-rules.pro
apps/androidtv/player/engine-mpv/src/main/cpp/: CMakeLists.txt  mpv_jni.c
apps/tvos/: project.yml
apps/tvos/App/: AppContainer.swift  DeepLink.swift  EngineAcceptanceView.swift  Info.plist  RootView.swift  Spidola.entitlements  SpidolaApp.swift  TopShelfSnapshotWriter.swift
apps/tvos/App/Resources/: ThirdPartyNotices.txt
apps/tvos/Shared/: TopShelfSnapshot.swift
apps/tvos/TopShelf/: ContentProvider.swift  Info.plist  README.md
apps/tvos/TopShelf/Resources/: Localizable.xcstrings  Localizable.xcstrings.license
apps/tvos/UITests/: Info.plist  RealEngineHeadendTests.swift  SpidolaUITests.swift  TopShelfSnapshotTests.swift
apps/tvos/contract-harness/: main.swift
crates/core-api/: Cargo.toml  build.rs  uniffi.toml
crates/core-api/src/: error.rs  events.rs  import.rs  lib.rs  logging.rs  records.rs  runtime.rs  secrets.rs  services.rs  settings.rs  storage_crypto.rs  xtream.rs
crates/core-api/src/services/: catalog.rs  custom.rs  epg.rs  favorites.rs  pairing.rs  recents.rs  search.rs  settings.rs  source.rs
crates/core-api/tests/: contract.rs
crates/core-db/: Cargo.toml
crates/core-db/src/: error.rs  lib.rs  migrations.rs  pool.rs  refresh.rs  repo.rs  search_index.rs
crates/core-db/src/repo/: channels.rs  custom.rs  epg.rs  favorites.rs  history.rs  settings.rs  sources.rs
crates/core-fetch/: Cargo.toml
crates/core-fetch/src/: body.rs  client.rs  error.rs  headers.rs  lib.rs  tls.rs
crates/core-fetch/tests/: streaming.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: category.rs  channel.rs  custom.rs  epg.rs  error.rs  favorite.rs  history.rs  ids.rs  lib.rs  locator.rs  secret.rs  source.rs
crates/core-pair/: Cargo.toml
crates/core-pair/src/: error.rs  form.rs  lib.rs  server.rs  token.rs
crates/core-pair/tests/: pairing.rs
crates/core-parse/: Cargo.toml
crates/core-parse/benches/: m3u.rs  xmltv.rs
crates/core-parse/src/: error.rs  lib.rs  m3u.rs  sink.rs  xmltv.rs
crates/core-parse/src/m3u/: attributes.rs  diagnostics.rs  lexer.rs
crates/core-parse/src/xmltv/: pull.rs  window.rs
crates/core-parse/tests/: property.rs  xmltv_property.rs
crates/core-search/: Cargo.toml
crates/core-search/benches/: search.rs
crates/core-search/src/: error.rs  lib.rs  query.rs  ranking.rs
crates/core-xtream/: Cargo.toml
crates/core-xtream/src/: auth.rs  catalog.rs  diagnostics.rs  epg.rs  error.rs  lib.rs  request.rs  series.rs  urls.rs  wire.rs
crates/core-xtream/tests/: stub_server.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bindings.rs  main.rs  packaging.rs  paths.rs  phase1.rs
docs/: IMPLEMENTATION_PLAN.md  PRD.md  TECH_SPEC.md  engine-acceptance.md  phase7-decisions.md  toolchains.md
docs/adr/: 0001-contributor-model.md  0002-project-name-spidola.md
fixtures/m3u/: README.md  attributes.m3u  basic.m3u  messy.m3u
fixtures/streams/: README.md
fixtures/xmltv/: README.md  basic.xml  messy.xml
fixtures/xtream/: README.md  handshake-active.json  handshake-denied.json  handshake-expired.json  live-categories.json  live-streams.json  series-info-array.json  series-info.json  series.json  vod-streams.json
tools/build-libmpv-android/: .gitignore  README.md  build.sh  fetch.sh  toolchain.sh  verify-pins.sh
tools/build-libmpv-android/components/: ffmpeg.sh  freetype.sh  fribidi.sh  harfbuzz.sh  libass.sh  libplacebo.sh  mbedtls.sh  mpv.sh
tools/build-mpvkit/: README.md  verify-mpvkit-pin.sh
tools/ci/: README.md  assert-toolchains.sh  build-contract-harness-android.sh  build-contract-harness-tvos.sh  check-secret-logging.sh  criterion-benchmarks.txt  criterion_regression.py  run-android-tv-emulator-ci.sh  run-android-tv-emulator-smoke.sh  run-criterion-benchmarks.sh  test_criterion_regression.py
tools/community/: validate-translations.py
tools/licenses/: README.md  check-swiftpm-licenses.py  swiftpm-policy.json
tools/release/: README.md  build-android-direct.sh  generate-changelog.py
tools/test-headend/: Cargo.toml  README.md  generate-assets.sh  headend.sh
tools/test-headend/src/: lib.rs  main.rs  server.rs
tools/test-headend/tests/: headend.rs
(+143 files in other folders)
