# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

# Spidola Rust core — virtual workspace manifest.
# Layer model: TECH_SPEC §2; crate purposes: §3.3; conventions: §3.3 + rust-dev-pro.md.

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.96.1"
license = "AGPL-3.0-or-later"
authors = ["Spidola contributors"]
repository = "https://github.com/edbpede/spidola"
homepage = "https://github.com/edbpede/spidola"

# Shared dependency versions are declared once here and referenced from member
# crates with `{ workspace = true }`. rustls-only HTTP (no OpenSSL, TECH_SPEC §4.5);
# rusqlite bundled pins one SQLite (with FTS5) across platforms (§4.4).
[workspace.dependencies]
# Domain + errors + serialization.
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
url = "2"
# Persistence: bundled SQLite (FTS5, contentless-delete) + forward-only migrations.
rusqlite = { version = "0.37", features = ["bundled", "functions", "trace"] }
rusqlite_migration = "2"
# HTTP: reqwest on rustls (TECH_SPEC §12), no OpenSSL anywhere. Native platform roots where
# the OS exposes a store, plus the bundled webpki set as a fallback for targets without one
# (e.g. aarch64-apple-tvos) that would otherwise load zero roots and fail every handshake;
# reqwest merges both into one RootCertStore, so desktop keeps its native roots.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots", "gzip", "stream"] }
bytes = "1"
# Async runtime (owned by core-api) + observability.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
# UniFFI (proc-macro mode): the single boundary definition generating idiomatic Swift +
# Kotlin bindings (TECH_SPEC §5). `tokio` feature lets exported `async fn`s drive the
# core-owned runtime; `cli` (xtask only) exposes `uniffi_bindgen_main` for generation.
uniffi = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.9"
# Application-only (xtask + tests); never a library dependency (TECH_SPEC §4.7).
anyhow = "1"
# Test / bench tooling.
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
# Workspace lints — NOT inherited automatically; every member opts in with
# `[lints] workspace = true`. See rust-dev-pro.md and TECH_SPEC §3.3.
[workspace.lints.rust]
# `unsafe_code` is `warn` (not `forbid`) at the workspace level because `core-api`
# will host UniFFI-generated FFI glue; every crate that can adds `#![forbid(unsafe_code)]`.
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Review-prompt tier: pedantic at warn with priority -1 so individual lints below win.
pedantic = { level = "warn", priority = -1 }
# Standing rule (error handling, TECH_SPEC §4.7): flag unwrap/expect on fallible paths.
# Warn-level so `#[cfg(test)]` modules may opt out with a scoped `#![allow(...)]`;
# CI runs clippy with `-D warnings`, making these blocking for non-test code.
unwrap_used = "warn"
expect_used = "warn"
# Complexity/length lints are ADVISORY per the modularity doctrine (TECH_SPEC §3.1):
# warned here with generous thresholds (clippy.toml). Under CI's `-D warnings` a fired
# lint is answered in review with either a refactor or a scoped, commented
# `#[allow(...)]` recording the single concept — never a global threshold bump.
too_many_lines = "warn"
cognitive_complexity = "warn"
