# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The façade composing the core crates; carries the UniFFI definitions (the only crate the apps see)."
publish = false

[dependencies]
core-model = { path = "../core-model" }
core-db = { path = "../core-db" }
core-fetch = { path = "../core-fetch" }
core-search = { path = "../core-search" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
