# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The façade composing the core crates; carries the UniFFI definitions (the only crate the apps see)."
publish = false

# The apps consume this crate as an FFI library: `staticlib` for the tvOS XCFramework and
# the Android per-ABI build, `cdylib` for library-mode `uniffi-bindgen` introspection, and
# `lib` so `xtask` + the in-tree contract tests can link it as a normal Rust dependency.
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
core-model = { path = "../core-model" }
core-db = { path = "../core-db" }
core-fetch = { path = "../core-fetch" }
core-pair = { path = "../core-pair" }
core-parse = { path = "../core-parse" }
core-search = { path = "../core-search" }
core-xtream = { path = "../core-xtream" }
# Mints the opaque host-secrets keys the DB stores in place of credentials (TECH_SPEC §12).
rand = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uniffi = { workspace = true, features = ["tokio"] }

[dev-dependencies]
# Contract tests build a real `Core` over a throwaway on-disk database.
tempfile = { workspace = true }
# A second handle to that database, for the one thing the boundary is too typed to express: a
# test that needs a specific write to fail installs the refusal on the schema itself.
core-db = { path = "../core-db" }

[lints]
workspace = true
