# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite persistence (rusqlite bundled, FTS5) and forward-only migrations."
publish = false

[lints]
workspace = true
