# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite persistence (rusqlite bundled, FTS5) and forward-only migrations."
publish = false

[dependencies]
core-model = { path = "../core-model" }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# The writer-free refresh stages into a temp-file SQLite DB owned by a `TempDir`
# (crate::refresh), so this is a normal dependency, not a dev-only one.
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
