# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-model"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Spidola domain types: identifiers, sources, channels, EPG, secrets."
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
