# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-search"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Query layer over FTS5: prefix compilation and fuzzy fallback ranking."
publish = false

[lints]
workspace = true
