# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-search"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Query layer over FTS5: prefix compilation and fuzzy fallback ranking."
publish = false

[dependencies]
core-model = { path = "../core-model" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
core-db = { path = "../core-db" }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "search"
harness = false

[lints]
workspace = true
