# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "core-xtream"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xtream Codes API client and mapping into core-model types."
publish = false

[dependencies]
core-model = { path = "../core-model" }
core-fetch = { path = "../core-fetch" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `url` builds every request and stream URL: its path-segment writer percent-encodes the
# credential segments by construction, which is what makes `crate::urls` auditable (§12).
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
