# SPDX-FileCopyrightText: 2026 Spidola contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Developer automation (binding generation, packaging, fixtures, release) — the cargo-xtask pattern."
publish = false

[dependencies]
core-model = { path = "../core-model" }
core-db = { path = "../core-db" }
core-fetch = { path = "../core-fetch" }
core-parse = { path = "../core-parse" }
core-search = { path = "../core-search" }
anyhow = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
